@@ -16,3 +16,5 @@ Walter Stroebel <walter.stroebel@lifeline.nl> (RemoteSyslogAppender)
 Glen Scott <glen_s@yahoo.com> (PatternLayout, SimpleConfigurator)
 Tony Cheung <dragonman@asiayeah.com> (OpenVMS support)
 Alex Tapaccos <ATapaccos@redfig.com> (RollingFileAppender)
+Brendan B. Boerner <bboerner@texas.net> (Multiple Appender support for
+         Categories)
